--- a/laptop/makefile
+++ b/laptop/makefile
@@ -2,7 +2,7 @@ obj = main.cpp lib.cpp lib.h
 cxx = -O3 -mfpmath=sse -fstack-protector-all -g -W -Wall -Wextra -Wunused -Wcast-align -Werror -pedantic -pedantic-errors -Wfloat-equal -Wpointer-arith -Wformat-security -Wmissing-format-attribute -Wformat=1 -Wwrite-strings -Wcast-align -Wno-long-long -Woverloaded-virtual -Wnon-virtual-dtor -Wcast-qual -Wno-suggest-attribute=format
 gpr = -pg $(cxx)
 wo3 = -mfpmath=sse -fstack-protector-all -g -W -Wall -Wextra -Wunused -Wcast-align -Werror -pedantic -pedantic-errors -Wfloat-equal -Wpointer-arith -Wformat-security -Wmissing-format-attribute -Wformat=1 -Wwrite-strings -Wcast-align -Wno-long-long -Woverloaded-virtual -Wnon-virtual-dtor -Wcast-qual -Wno-suggest-attribute=format
-
+testfold = ../matrixtests/
 
 a.out: $(obj)
 
@@ -28,4 +28,4 @@ push:
 	git push
 
 test:
-	./test.sh ../matrixtests/ 
+	./test.sh  $(testfold)
